@@ -84,6 +84,8 @@ class Rules {
     std::shared_ptr<Rule> operator[](int index) const { return m_rules[index]; }
     std::shared_ptr<Rule> at(int index) const { return m_rules[index]; }
 
+    std::vector<std::shared_ptr<actions::Action> > m_defaultActions;
+
     std::vector<std::shared_ptr<Rule> > m_rules;
 };
 
