@@ -61,6 +61,13 @@ int RulesSetPhases::append(RulesSetPhases *from, std::ostringstream *err) {
             return res;
         }
         amount_of_rules = amount_of_rules + res;
+
+        std::vector<std::shared_ptr<actions::Action> > *actions_from = &from->at(phase)->m_defaultActions;
+        std::vector<std::shared_ptr<actions::Action> > *actions_to = &at(phase)->m_defaultActions;
+
+        for (size_t j = 0; j < actions_from->size(); j++) {
+            actions_to->push_back(actions_from->at(j));
+        }
     }
 
     return amount_of_rules;
